--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,10 @@
   box-sizing: border-box;
   box-shadow: 2px 2px;
 }
+
+@media only screen and (max-width: 600px) {
+  .card {
+    width: 80%;
+    height: 30% ;
+  }
+}
